/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package distsys.smart_office;

/**
 *
 * @author anand
 */

import io.grpc.stub.StreamObserver;

public class PrinterScannerManagementImpl extends PrinterScannerGrpc.PrniterScannerImplBase {
    @Override
    public void printDocument(PrintRequest request, StreamObserver<PrintResponse>)
}
